--- a/style.css
+++ b/style.css
@@ -141,3 +141,9 @@ footer {
     visibility: visible;
     opacity: 1;
 }
+
+.popup__image {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+}
